@@ -1,3 +1,7 @@
+2011-01-11  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* configure.ac, config/x_ac_getpwnam.m4: Added X_AC_GETPWNAM.
+
 2011-01-09  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/xgetgrent.c (xgetgrent_buf_destroy): Fixed comment.
